samples/_failures_safe/1761423909_5d57df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d650cc6.c: In function ‘main’:
./samples/SAFE/__tmp_7d650cc6.c:121:5: error: expected declaration or statement at end of input
  121 |     for (int i = 0; i < stack_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_7d650cc6.c:121:5: error: expected declaration or statement at end of input
